--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "framer-motion": "^12.23.24",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
+    "motion": "^12.23.24",
     "next": "13.5.1",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
